# spacetraders_server-client

server/: go.sum  gqlgen.yml  main.go  server.go
server/graph/: generated.go  schema.resolvers.go
server_go/: go.mod
server_go/graph/: schema.graphqls
server_go/graph/model/: models_gen.go
server_rust/: Cargo.toml
server_rust/src/: main.rs
server_rust/src/models/: model.rs
server_rust/src/schema/: agent.rs  chart.rs  context.rs  contract.rs  faction.rs  mod.rs  model.rs  mutation_root.rs  payment.rs  query_root.rs  register_new_agent.rs  ship.rs  waypoint.rs
